📫👙 Checkpoint ./OGmain-page.html:65991231/2 ./index.html:65991231/1080

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
             <td rowspan="5">  
               <b>STUFF I LIKE</b>
               <br> <br>
-              <h7>🎮Videogames!</h7>
+              <h7> > Videogames!</h7>
               <br>
               <dt>⋆ Minecraft</dt>
               <dt>⋆ Roblox</dt>
               <dt>⋆ DDLC</dt>
               <dt>⋆ Subway surfers</dt>
               <br><br>
-                <h7>🎥Content creators!</h7>
+                <h7> > Content creators!</h7>
               <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
               <dt>
                 <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
@@ -92,14 +92,14 @@
                 <a href="https://www.youtube.com/@SinjinDrowning">⋆ Sinjin Drowningㅤ</a>
               </dt>
               <br><br>
-              <h7>🛹Hobbies!</h7>
+              <h7> > Hobbies</h7>
               <br>
               <dt>⋆ Drawing</dt>
               <dt>⋆ Skamteboard</dt>
               <dt>⋆ Videogames</dt>
               <dt>⋆ doing yr mom</dt>
               <br><br>
-              <h7>😼Other stuffs!</h7>
+              <h7> > Other stuffs!</h7>
               <br>
               <dt>⋆ Heathers</dt>
               <dt>⋆ Ride the Cyclone</dt>
@@ -107,6 +107,12 @@
               <dt>⋆ The front bottoms</dt>
               <dt>⋆ Garfield</dt>
               <dt>⋆ doing yr mom</dt></td>
+              <br> <br>
+              <h7> > Movies & Shows</h7>
+              <br>
+              <dt>* Heathers</dt>
+              <dt>* Bojack Horseman</dt>
+              <dt>* Donnie Darko</dt>
             <td>
               <img
                 src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-23_014855633.png?v=1721688537966"
