🕵🛥 Checkpoint ./index.html:65991231/1155 ./.glitch-assets:65991231/411

--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
               <dt>RoshenCrabs</dt>
             </td>
             
-            <td rowspan="5">  
+            <td rowspan="6">  
               <b>STUFF I LIKE</b>
               <br> <br>
-              <h7> > Videogames!</h7>
+              <h7>  Videogames!</h7>
               <br>
               <dt>⋆ Minecraft</dt>
               <dt>⋆ Roblox</dt>
               <dt>⋆ DDLC</dt>
               <dt>⋆ Subway surfers</dt>
               <br><br>
-                <h7> > Content creators!</h7>
+                <h7>  Content creators!</h7>
               <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
               <dt>
                 <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
@@ -92,23 +92,25 @@
                 <a href="https://www.youtube.com/@SinjinDrowning">⋆ Sinjin Drowningㅤ</a>
               </dt>
               <br><br>
-              <h7> > Hobbies</h7>
+              <h7>  Hobbies</h7>
               <br>
               <dt>⋆ Drawing</dt>
               <dt>⋆ Skamteboard</dt>
               <dt>⋆ Videogames</dt>
               <dt>⋆ doing yr mom</dt>
               <br><br>
-              <h7> > Other stuffs!</h7>
+              <h7>  Music</h7>
               <br>
-              <dt>⋆ Heathers</dt>
-              <dt>⋆ Ride the Cyclone</dt>
-              <dt>⋆ Hermitcraft</dt>
+              <dt>⋆ Various showtunes</dt>
               <dt>⋆ The front bottoms</dt>
-              <dt>⋆ Garfield</dt>
-              <dt>⋆ doing yr mom</dt></td>
+              <dt>⋆ Modern baseball</dt>
+              <dt>⋆ McCafferty</dt>
+              <dt>⋆ The Flat Stanleys</dt>
+              <dt>⋆ Lifelover</dt>
               <br> <br>
-              <h7> > Movies & Shows</h7>
+              <h7>  Movies 
+                &
+                Shows</h7>
               <br>
               <dt>* Heathers</dt>
               <dt>* Bojack Horseman</dt>
@@ -134,6 +136,11 @@
             </td>
           </tr>
       <td rowspan="3"> 
+              <img
+                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717"
+                style="width: 90%"
+              />
+        <h7> ☝ Thats kinda what i look like</h7>
         <b></b>
       </td>
           <tr>
