💐🛍 Checkpoint ./index.html:65991231/111

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <dt>⋆ I'm latvian</dt>
             </td>
             <td>
-              <b>MY FAVOURITE FOOD IS <h7>PIZZA</h7></b>
+              <b>MY FAVOURITE FOOD IS <h7>FRENCH FRIES</h7></b>
             </td>
           </tr>
           <tr>
@@ -73,14 +73,14 @@
             <td rowspan="6">  
               <b>STUFF I LIKE</b>
               <br> <br>
-              <h7>  Videogames!</h7>
+              <h7> &gt; Videogames!</h7>
               <br>
               <dt>⋆ Minecraft</dt>
               <dt>⋆ Roblox</dt>
               <dt>⋆ DDLC</dt>
               <dt>⋆ Subway surfers</dt>
               <br><br>
-                <h7>  Content creators!</h7>
+                <h7> &gt; Content creators!</h7>
               <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
               <dt>
                 <a href="https://www.youtube.com/@GoodTimesWithScar">⋆ GTWSㅤ</a>
@@ -92,14 +92,14 @@
                 <a href="https://www.youtube.com/@SinjinDrowning">⋆ Sinjin Drowningㅤ</a>
               </dt>
               <br><br>
-              <h7>  Hobbies</h7>
+              <h7> &gt; Hobbies</h7>
               <br>
               <dt>⋆ Drawing</dt>
               <dt>⋆ Skamteboard</dt>
               <dt>⋆ Videogames</dt>
               <dt>⋆ doing yr mom</dt>
               <br><br>
-              <h7>  Music</h7>
+              <h7> &gt; Music</h7>
               <br>
               <dt>⋆ Various showtunes</dt>
               <dt>⋆ The front bottoms</dt>
@@ -108,7 +108,7 @@
               <dt>⋆ The Flat Stanleys</dt>
               <dt>⋆ Lifelover</dt>
               <br> <br>
-              <h7>  Movies 
+              <h7> &gt; Movies 
                 &
                 Shows</h7>
               <br>
