--- a/Ramblings.html
+++ b/Ramblings.html
@@ -7,10 +7,9 @@
 
 
     <div class="content">
-      <h1>WELCOME TO THE DINGUS DUNGEON</h1>
-      <h6>This is a page about me !!</h6>
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%92%9BMac%F0%9F%92%9B-trot-padded-4x.gif?v=1724267161860" style="width:15%">
-<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1724267169058" style="width:15%" align="right" >
+      <h1>These are my ramblings!!!</h1>
+      <h6>This is a page just for my rambling :-)</h6>
+     
       <table style="width: 100%">
         <tbody>
           <tr>
@@ -22,9 +21,7 @@
             <th style="width: 20%">
 
             </th>
-            <tr><td colspan="3"><img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" style="width: 31.5%"/><img src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif" style="width: 31.5%"/><a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif" style="width: 110%"/></a></td>
 
-          </tr>
           </tr>
           <tr>
             <td rowspan="1">
@@ -113,7 +110,7 @@
               <dt>* Falsettos</dt>
             <td>
        
-            <h7>Pages</H7>
+            <H7>Pages</H7>
               <a href="Heathers.html">Heathers stuff</a>
               <a href="slime-tuts.html">Heathers bootlegs</a>
             </td>    
