🐪🚩 Checkpoint ./index.html:65991231/2822 ./Ramblings.html:65991231/15299

--- a/index.html
+++ b/index.html
@@ -111,16 +111,15 @@
               <dt>* Bojack Horseman</dt>
               <dt>* Donnie Darko</dt>
               <dt>* Falsettos</dt>
+            </td>
             <td>
        
-            <h7>Pages</H7>
-              <a href="Heathers.html">Heathers stuff</a>
+            <h7>Pages</h7>
+              <a href="Heathers.html">Heathers stuff</a> <br> <br>
               <a href="slime-tuts.html">Heathers bootlegs</a>
             </td>    
           <tr>
             <td>
-              
-
               <img
                 src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-07-23_014520045.png?v=1721688323633"
                 style="width: 90%"
