🛣🌂 Checkpoint ./RamblingsStyle.css:65991231/736 ./Ramblings.html:65991231/329

--- a/Ramblings.html
+++ b/Ramblings.html
@@ -18,10 +18,11 @@
           </tr>
           <tr>
             <td>
-              <h1>test1</h1>
+              <h1>26/10/24</h1>
             </td>
             <td>
-              <h1>test 2</h1>
+              <b>Hello!!! I made a page for my rambling, this will have anything from me talking about my day, to me rambling
+              about heathers (which there will be a lot of)</b>
             </td>
           </tr>
           <tr>
