👁🏁 Checkpoint ./Ramblings.html:65991231/421 ./index.html:65991231/89 ./RamblingsStyle.css:65991231/140

--- a/Ramblings.html
+++ b/Ramblings.html
@@ -9,6 +9,7 @@
     <div class="content">
       <h1>These are my ramblings!!!</h1>
       <h6>This is a page just for my rambling :-)</h6>
+      <h6><a href="index.html">Go back?</a></h6>
 
       <table style="width: 100%">
         <tbody>
@@ -22,7 +23,8 @@
             </td>
             <td>
               <b>Hello!!! I made a page for my rambling, this will have anything from me talking about my day, to me rambling
-              about heathers (which there will be a lot of)</b>
+              about heathers (which there will be a lot of)! I initially made this page because i had something i wanted to
+              ramble about, but after i finished making it.. i entirely forgot what i was gonna ramble about.</b>
             </td>
           </tr>
           <tr>
