--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
        
             <h7>Pages</h7>
               <a href="Heathers.html">Heathers stuff</a> <br> <br>
-              <a href="slime-tuts.html">Heathers bootlegs</a>
+              <a href="slime-tuts.html">Heathers bootlegs</a> <br> <br>
+              <a href="https://dingus-dungeon.glitch.me/Ramblings.html"></a>
             </td>    
           <tr>
             <td>
