📕🌗 Checkpoint ./indexStyle.css:65991231/190 ./HeathersStyle.css:65991231/531 ./slime-tuts.html:65991231/8 ./bog.html:65991231/170 ./index.html:65991231/191

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </td>
             <td>
               <b>INFO ABOUT ME!</b>
-              <dt>⋆ My names Dingo or McNamara :-)</dt>
+              <dt>⋆ My names Dingo :-)</dt>
               <dt>⋆ He/Him</dt>
               <dt>⋆ 23/12/08</dt>
               <dt>⋆ I'm latvian</dt>
@@ -133,7 +133,9 @@
                 src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717"
                 style="width: 90%"
               />
-        <h7> ☝ Thats kinda what i look like</h7>
+        <h7> ☝ Thats kinda what</h7>
+        <a href="bog.html">i</a>
+        <h7> look like</h7>
         <b></b>
       </td>
           <tr>
