--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="slime-tut-STYLE.css" />
+    <link rel="stylesheet" href="slime-tut-Style.css" />
   </head>
   <body>
     <div class="content">
