🐘😂 Checkpoint ./.glitch-assets:65991231/436 ./bog.html:65991231/496 ./index.html:65991231/171

--- a/bog.html
+++ b/bog.html
@@ -1,5 +1,20 @@
+<html>
+  <head>
+    <style>
+      img {
+  border: 2px solid black;
+}
+    </style>
+  </head>
+  <body>
+    
+
 <h1>
-  oh no! something went wrong
+  When is it Safe to Leave the Bog?
 
 </h1>
-<b> you just found the bog :((</b>
+<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-11-13_205049303.png?v=1731523851556"
+     style="width: 30%"> <br> <br>
+<b> Tuesday</b>
+  </body>
+</html>
