⛴⚽️ Checkpoint ./index.html:65991231/500 ./indexStyle.css:65991231/477 ./.glitch-assets:65991231/370

--- a/index.html
+++ b/index.html
@@ -13,22 +13,17 @@
       <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%92%9BMac%F0%9F%92%9B-trot-padded-4x.gif?v=1724267161860" style="width:15%">
 <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1724267169058" style="width:15%" align="right" >
       <table style="width: 100%">
+                 <b>Merry christmas ho</b>
         <tbody>
           <tr>
-            <th style="width: 20%">
 
-            </th>
-            <th>      
-            </th>
-            <th style="width: 20%">
 
-            </th>
             <tr><td colspan="3"><img src="https://blinkies.cafe/b/display/0118-rubberducky.gif" style="width: 31.5%"/><img src="https://i7.glitter-graphics.org/pub/1183/1183567lz9y15lmej.gif" style="width: 31.5%"/><a href="Heathers.html"><img src="https://i7.glitter-graphics.org/pub/471/471307leaaevj0dm.gif" style="width: 110%"/></a></td>
 
           </tr>
           </tr>
           <tr>
-            <td rowspan="1">
+            <td rowspan="1" style="width: 20%">
               <b>Pals ╰(*°▽°*)╯</b> <br />
               <a href="https://roopert23.glitch.me/">ㅤRupertㅤ</a>
               <a href="https://bigspaceguy.straw.page/">ㅤMichealㅤ</a>
@@ -42,7 +37,7 @@
               <dt>⋆ 23/12/08</dt>
               <dt>⋆ I'm latvian</dt>
             </td>
-            <td>
+            <td style="width: 20%">
               <b>MY FAVOURITE FOOD IS <h7>FRENCH FRIES</h7></b>
             </td>
           </tr>
