🚁🙍 Checkpoint ./index.html:65991231/457 ./indexStyle.css:65991231/194 ./Ramblings.html:65991231/706

--- a/Ramblings.html
+++ b/Ramblings.html
@@ -30,12 +30,16 @@
           <tr>
             <td rowspan="2">
 <h1>
-  test
+  13/11/24
         </h1>
             </td>
           </tr>
           <td>
-            <h1>test4</h1>
+            <b>first actual thing here yay!! I was about to start doing homework, but then i remembered i wanted
+            to add a new silly thing to my site (its an easteregg, so you can try to find it!!) so i opened the site
+            and realised the formatting was all messed up from the last time was on here, fixing it was
+            pretty simple, but then i wanted to make just a couple more small tweaks.. and now im here at almost
+            10pm with no homework complete :P</b>
           </td>
 
           <tr></tr>
