🚙💾 Checkpoint ./index.html:65991231/217 ./Heathers.html:65991231/409

--- a/Heathers.html
+++ b/Heathers.html
@@ -117,6 +117,7 @@
                 >"Dear diary, my teenage angst bullshit now has a body
                 count."</h10
               >
+             <br><br><br> <center> <dt><a href="https://www.youtube.com/watch?v=yMwIorFCzfk">🦧</a></dt> </center>
             </td>
 
             <td>
