--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
                 >
               
                 <a href="https://www.reddit.com/user/StoicWanders/">Reddit</a>
-              <a href="https://www.pixilart.com/dibger">Pixilart</a>
               <h7>[DISCORD]</h7>
               <dt>dingosucks</dt> <br>
             </td>
@@ -159,6 +158,7 @@
       
         </tbody>
       </table>
+                   <marquee behavior="scroll" direction="left">🚗🚕🚙 nyoooooooom</marquee>
     </div>
   </body>
 </html>
