🙅⛄️ Checkpoint ./index.html:65991231/2762 ./bog.html:65991231/798 ./bogStyle.css:65991231/1248 ./indexStyle.css:65991231/1317

--- a/index.html
+++ b/index.html
@@ -126,10 +126,24 @@
             </td>
           </tr>
       <td rowspan="3"> 
+                
+            <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="Avatar" style="width:300px;height:300px;">
+    </div>
+    <div class="flip-card-back">
+      <h1>John Doe</h1>
+      <p>Architect  Engineer</p>
+      <p>We love that guy</p>
+    </div>
+  </div>
+</div>
+       
               <img
                 src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717"
                 style="width: 90%"
-              />
+              /> 
         <h7> ☝ Thats kinda what</h7>
         <a href="bog.html">i</a>
         <h7> look like</h7>
