--- a/index.html
+++ b/index.html
@@ -130,20 +130,16 @@
             <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="Avatar" style="width:300px;height:300px;">
+      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="Avatar" style="width: 90%" >
     </div>
     <div class="flip-card-back">
-      <h1>John Doe</h1>
-      <p>Architect  Engineer</p>
-      <p>We love that guy</p>
+ <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="Avatar" style="width: 90%" >
+   
     </div>
   </div>
 </div>
        
-              <img
-                src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717"
-                style="width: 90%"
-              /> 
+
         <h7> ☝ Thats kinda what</h7>
         <a href="bog.html">i</a>
         <h7> look like</h7>
