🚝🗻 Checkpoint ./.glitch-assets:65991231/872 ./index.html:65991231/406 ./indexStyle.css:65991231/92

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
             <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="Avatar" style="width: 90%" >
+      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="dingoo" style="width: 90%" >
     </div>
     <div class="flip-card-back">
- <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="Avatar" style="width: 90%" >
+ <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_FLIP!.png?v=1731532140283" alt="dingoo" style="width: 90%" >
    
     </div>
   </div>
