🐃👸 Checkpoint ./slime-tuts.html:65991231/327

--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -111,7 +111,7 @@
               >
             </td>
             <td><b>dont have 😞</b></td>
-            <td><b>dont have 😞</b></td>
+            <td><a href = "https://www.youtube.com/watch?v=TOoD0F2R8KM">Full recording</a></td>
           </tr>
           =
           <tr>
