--- a/slime-tuts.html
+++ b/slime-tuts.html
@@ -61,7 +61,9 @@
               <h6>2022</h6>
             </td>
             <td>
-              <dt>UK & Ireland Tour</dt>
+              <dt>UK 
+                &
+                Ireland Tour</dt>
               <h6>2023</h6>
             </td>
             <td>
@@ -69,7 +71,8 @@
               <h6>2024</h6>
             </td>
           </tr>
-
+          <br> <br>
+            <b>IF YOU HAVE A BOOTLEG I DONT HAVE PLEASE CONTACT ME ON DISCORD @dingosucks</b>
           <tr>
             <td>
               <a href="https://www.youtube.com/watch?v=clTV6PBY6y0"
@@ -111,7 +114,7 @@
               >
             </td>
             <td><b>dont have 😞</b></td>
-            <td><a href = "https://www.youtube.com/watch?v=TOoD0F2R8KM">Full recording</a></td>
+            <td><b>copyrighted 😞 CONTACT ME IF YOU HAVE IT</b></td>
           </tr>
           =
           <tr>
@@ -132,6 +135,9 @@
               <br>
               <br>
               <a href="https://www.youtube.com/watch?v=vEhRPKJ8XfI">Heathers The Other Palace 2022 (Full)</a>
+              <br> 
+              <br>
+              <a href="https://m.youtube.com/playlist?list=PLo-byEojLWGc-deLbcZhWmTSPUw4Oj02a">Heathers 2009 demos (playlist)</a>
             </td>
           </tr>
         </tbody>
