❤️⛴ Checkpoint ./Heathers.html:65991231/8

--- a/Heathers.html
+++ b/Heathers.html
@@ -60,7 +60,7 @@
                 src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/6%20Dead%20Girl%20Walking.mp3?v=1721111061361"
                 type="audio/mpeg"
               />
-              Your browser does not support the audio element.
+              Your browser does not support the audio element  :-(
             </audio>
           </tr>
 
