🎨📮 Checkpoint ./script.js:65991231/546 ./bog.html:65991231/402

--- a/bog.html
+++ b/bog.html
@@ -1,6 +1,7 @@
 <html>
   <head>
         <link rel="stylesheet" href="bogStyle.css" />
+        <script src="src/script.js"></script>
     <style>
       img {
   border: 2px solid black;
@@ -17,6 +18,7 @@
 <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-11-13_205049303.png?v=1731523851556"
      style="width: 30%"> <br> <br>
 <b> Tuesday</b>
+        <p id="LeaveBog"></p>
     
 
     
