--- a/bog.html
+++ b/bog.html
@@ -6,6 +6,10 @@
       img {
   border: 2px solid black;
 }
+
+h1 {text-align: center;}
+b {text-align: center;}
+
     </style>
   </head>
   <body>
@@ -16,9 +20,9 @@
 
 </h1>
 <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2024-11-13_205049303.png?v=1731523851556"
-     style="width: 30%"> <br> <br>
+     style="width: 30%" class="center"> <br> <br>
 <b> Tuesday</b>
-        <p id="LeaveBog"></p>
+        <b id="LeaveBog"></b>
     
 
     
