--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
     <div class="content">
       <h1>WELCOME TO THE DINGUS DUNGEON</h1>
       <h6>This is a page about me !!</h6>
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%92%9BMac%F0%9F%92%9B-trot-padded-4x.gif?v=1724267161860" style="width:15%">
-<img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/pony-town-%F0%9F%90%A6Grian%F0%9F%90%A6-trot-padded-4x.gif?v=1724267169058" style="width:15%" align="right" >
       <table style="width: 100%">
-                 <marquee behavior="scroll" direction="left">meow meow meow meow MEOW!</marquee>
+                 <marquee behavior="scroll" direction="left">leave b4 its 2 late</marquee>
 
         <tbody>
           <tr>
