🍄🐗 Checkpoint ./index.html:65991231/36

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
     <div class="content">
-      <h1>WELCOME TO THE DINGUS DUNGEON</h1>
+      <h1>welcome</h1>
       <h6>This is a page about me !!</h6>
       <table style="width: 100%">
                  <marquee behavior="scroll" direction="left">leave b4 its 2 late</marquee>
