🎥🤗 Checkpoint ./indexStyle.css:65991231/92 ./index.html:65991231/413

--- a/index.html
+++ b/index.html
@@ -80,18 +80,16 @@
               <br><br>
               <h7> &gt; Hobbies</h7>
               <br>
-              <dt>⋆ Drawing</dt>
-              <dt>⋆ Skamteboard</dt>
-              <dt>⋆ Videogames</dt>
-              <dt>⋆ doing yr mom</dt>
+              <dt>⋆ Drawing occasionally</dt>
+              <dt>* Hobbies are expensive man idk</dt>
               <br><br>
               <h7> &gt; Music</h7>
               <br>
               <dt>⋆ Various showtunes</dt>
-              <dt>⋆ The front bottoms</dt>
-              <dt>⋆ Modern baseball</dt>
-              <dt>⋆ McCafferty</dt>
-              <dt>⋆ The Flat Stanleys</dt>
+              <dt>⋆ The Front Bottoms</dt>
+              <dt>⋆ ABBA</dt>
+              <dt>⋆ Crywank</dt>
+              <dt>⋆ Panucci's pizza</dt>
               <dt>⋆ Lifelover</dt>
               <br> <br>
               <h7> &gt; Movies 
@@ -102,11 +100,11 @@
               <dt>* Bojack Horseman</dt>
               <dt>* Donnie Darko</dt>
               <dt>* Falsettos</dt>
-              <dt>* Little Shop of Horrors</dt>
+              <dt>* Forrest Gump</dt>
             </td>
             <td>
        
-            <h7>Pages</h7>
+            <h7>✴ pages</h7>
               <a href="Heathers.html">Heathers stuff</a> <br> <br>
               <a href="slime-tuts.html">Heathers bootlegs</a> <br> <br>
               <a href="https://dingus-dungeon.glitch.me/Ramblings.html">My ramblings</a>
