🌁📯 Checkpoint ./index.html:65991231/308 ./.glitch-assets:65991231/2958 ./script.js:65991231/70

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
               <b>My dog Buddy</b>
             </td>
           </tr>
+            <img alt="there should be an image here oops" id="photography">
           <tr>
 
             <td>
