🏟📅 Checkpoint ./index.html:65991231/1075

--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
             <td>
               <b>my birthday is in:</b> <br>
               <dt id="demo"></dt></td>
-            <td></td> 
+            <td>
+              <img id="photo" src="" alt="whoops photo gone" />
+            <b>hjgfdfd</b>
+            
+            </td> 
             </tr>
             <td rowspan="1">
               <img
@@ -152,7 +156,6 @@
               <b>My dog Buddy</b>
             </td>
           </tr>
-            <img alt="there should be an image here oops" id="photography">
           <tr>
 
             <td>
