🎸🍪 Checkpoint ./index.html:65991231/439 ./script.js:65991231/21

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <b>my birthday is in:</b> <br>
               <dt id="demo"></dt></td>
             <td>
-              <img id="photo" src="" alt="whoops photo gone" />
+              <img id="photo" src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/c7b48853-0264-47fb-ac26-0bff96f7ede5.jfif?v=1736538712386" alt="whoops photo gone" style="width: 90%" />
             <b>hjgfdfd</b>
             
             </td> 
