🎃🌓 Checkpoint ./bog.html:65991231/17

--- a/bog.html
+++ b/bog.html
@@ -30,6 +30,7 @@ const weekday = ["Sunday","Monday","Tuesday","Wednesday","Thursday","Friday","Sa
 const d = new Date();
 let day = weekday[d.getDay()];
 console.log(day)
+      print(day)
 
 if (day === "Tuesday") {
   document.getElementById("LeaveBog").innerHTML =  <h6><a href="index.html">Leave bog?</a></h6> ;
