--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="indexStyle.css" />
     <script src="script.js"></script>
+    <link rel="icon" type="image/x-icon" href="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/image_2025-02-12_222736567.png?v=1739392057392">
   </head>
   <body>
 
