--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <dt>⋆ I'm latvian</dt>
             </td>
             <td style="width: 20%" rowspan="1">
-              <b>✴  ✴</b>
+              <b>✴ what am i doing ✴</b>
             </td>
           </tr>
         
@@ -93,7 +93,7 @@
               <dt>⋆ ABBA</dt>
               <dt>⋆ Crywank</dt>
               <dt>⋆ Panucci's pizza</dt>
-              <dt>⋆ Lifelover</dt>
+              <dt>⋆ Ajj</dt>
               <br> <br>
               <h7> &gt; Movies 
                 &
