--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
             <h7>✴ pages</h7>
               <a href="Heathers.html">Heathers stuff</a> <br> <br>
               <a href="slime-tuts.html">Heathers bootlegs</a> <br> <br>
+              <a href="https://epic-movie-list.glitch.me">Movie list w/Rupert</a>
             </td>    
           <tr>
             <td>
