😂⛵️ Checkpoint ./index.html:65991231/316

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
               <dt>* Bojack Horseman</dt>
               <dt>* Donnie Darko</dt>
               <dt>* Falsettos</dt>
-              <dt>* Forrest Gump</dt>
+              <dt>* Girl, interrupted</dt>
+              <dt>* Fight club</dt>
+              <dt>More on my <a href="https://boxd.it/druJd">letterboxd</a> :-)</dt>
             </td>
             <td>
        
