--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td rowspan="1" style="width: 20%">
               <b>✴ pals</b> <br />
               <a href="https://roopert23.glitch.me/">Rupert</a>
-              <a href="https://bigspaceguy.straw.page/">Micheal</a>
+              <a href="https://kittypawsmeow.straw.page/">Embry</a>
               <a href="https://artfight.net/~WretchedRaymond45">Raymond</a>
               <a href="https://raincat73.straw.page/">Joe</a>
             </td>
