--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <tr>
             <td rowspan="1" style="width: 20%">
               <b>✴ pals</b> <br />
-              <a href="https://roopert23.glitch.me/">Rupert</a>
+              <a href="https://isopod23.github.io">Rupert</a>
               <a href="https://kittypawsmeow.straw.page/">Embry</a>
               <a href="https://artfight.net/~WretchedRaymond45">Raymond</a>
               <a href="https://raincat73.straw.page/">Joe</a>
@@ -100,11 +100,11 @@
                 Shows</h7>
               <br>
               <dt>* Heathers</dt>
-              <dt>* Bojack Horseman</dt>
-              <dt>* Donnie Darko</dt>
-              <dt>* Falsettos</dt>
+              <dt>* Arcane</dt>
               <dt>* Girl, interrupted</dt>
               <dt>* Fight club</dt>
+              <dt>* Bojack Horseman</dt>
+              <dt>* Donnie Darko</dt>
               <dt>More on my <a href="https://boxd.it/druJd">letterboxd</a> :-)</dt>
             </td>
             <td>
