--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>𓇣 welcome 𓇣</h1>
       <h6>to dingo's website</h6>
       <table style="width: 100%">
-                 <marquee behavior="scroll" direction="left">leave b4 its 2 late</marquee>
+                 <marquee behavior="scroll" direction="left">close your eyes and pretend you didn't do anything</marquee>
 
         <tbody>
           <tr>
@@ -38,7 +38,7 @@
               <dt>⋆ I'm latvian</dt>
             </td>
             <td style="width: 20%" rowspan="1">
-              <b>✴ what am i doing ✴</b>
+              <b>✴ shame wont change what you are ✴</b>
             </td>
           </tr>
         
