--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>𓇣 welcome 𓇣</h1>
       <h6>to dingo's website</h6>
       <table style="width: 100%">
-                 <marquee behavior="scroll" direction="left">close your eyes and pretend you didn't do anything</marquee>
+                 <marquee behavior="scroll" direction="left">what a strange man you are</marquee>
 
         <tbody>
           <tr>
@@ -65,9 +65,9 @@
               <h7> &gt; Videogames!</h7>
               <br>
               <dt>⋆ Minecraft</dt>
-              <dt>⋆ Roblox</dt>
+              <dt>⋆ Team Fortress 2</dt>
               <dt>⋆ DDLC</dt>
-              <dt>⋆ Subway surfers</dt>
+              <dt>⋆ give me suggestions please</dt>
               <br><br>
                 <h7> &gt; Content creators!</h7>
               <dt><a href="https://www.youtube.com/@Grian">⋆ Grianㅤ</a></dt>
@@ -144,10 +144,10 @@
             <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-      <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_Transparent.png?v=1729960917717" alt="dingoo" style="width: 90%" >
+      <img src="https://i.pinimg.com/736x/de/fc/fb/defcfbf82e98e8dcc0edb85d3a959ef6.jpg" alt="dingoo" style="width: 90%" >
     </div>
     <div class="flip-card-back">
- <img src="https://cdn.glitch.global/8cc87ae8-2401-45b0-98ad-907c24699c04/Dingo_FLIP!.png?v=1731532140283" alt="dingoo" style="width: 90%" >
+ <img src="https://i.pinimg.com/736x/de/fc/fb/defcfbf82e98e8dcc0edb85d3a959ef6.jpg" alt="dingoo" style="width: 90%" >
    
     </div>
   </div>
